[NAE-2169] User flag for internal or external
- added UserType enum
- added type parameter to AbstractUser
- added list of domains to Realm